@@ -2,7 +2,8 @@ package dev.mathops.web.site.course;
 
 import dev.mathops.commons.builder.HtmlBuilder;
 import dev.mathops.commons.builder.SimpleBuilder;
-import dev.mathops.db.logic.StudentData;
+import dev.mathops.db.logic.SystemData;
+import dev.mathops.db.logic.WebViewData;
 import dev.mathops.db.old.logic.PaceTrackLogic;
 import dev.mathops.db.old.rawrecord.RawCampusCalendar;
 import dev.mathops.db.old.rawrecord.RawCourse;
@@ -63,73 +64,76 @@ enum PageCalendar {
     /**
      * Generates the page that shows the student's term schedule and deadlines.
      *
-     * @param studentData the student data object
-     * @param site        the owning site
-     * @param req         the request
-     * @param resp        the response
-     * @param session     the login session
-     * @param logic       the site logic
+     * @param data    the web view data
+     * @param site    the owning site
+     * @param req     the request
+     * @param resp    the response
+     * @param session the login session
+     * @param logic   the site logic
      * @throws IOException  if there is an error writing the response
      * @throws SQLException if there is an error accessing the database
      */
-    static void doGet(final StudentData studentData, final CourseSite site, final ServletRequest req,
+    static void doGet(final WebViewData data, final CourseSite site, final ServletRequest req,
                       final HttpServletResponse resp, final ImmutableSessionInfo session,
                       final CourseSiteLogic logic) throws IOException, SQLException {
 
         final HtmlBuilder htm = new HtmlBuilder(2000);
-        Page.startOrdinaryPage(htm, site.getTitle(), session, false, Page.ADMIN_BAR | Page.USER_DATE_BAR,
-                null, false, true);
+        final String title = site.getTitle();
+        Page.startOrdinaryPage(htm, title, session, false, Page.ADMIN_BAR | Page.USER_DATE_BAR, null, false, true);
 
         htm.sDiv("menupanelu");
-        CourseMenu.buildMenu(studentData, site, session, logic, htm);
+        CourseMenu.buildMenu(data, site, session, logic, htm);
         htm.sDiv("panelu");
 
-        doCalendarContent(studentData, logic, htm, false);
+        doCalendarContent(data, logic, htm, false);
 
         htm.eDiv(); // panelu
         htm.eDiv(); // menupanelu
 
-        Page.endOrdinaryPage(studentData, site, htm, true);
+        final SystemData systemData = data.getSystemData();
+        Page.endOrdinaryPage(systemData, site, htm, true);
 
-        AbstractSite.sendReply(req, resp, AbstractSite.MIME_TEXT_HTML, htm.toString().getBytes(StandardCharsets.UTF_8));
+        final byte[] bytes = htm.toString().getBytes(StandardCharsets.UTF_8);
+        AbstractSite.sendReply(req, resp, AbstractSite.MIME_TEXT_HTML, bytes);
     }
 
     /**
      * Generates the page that shows the student's term schedule and deadlines.
      *
-     * @param studentData the student data object
-     * @param site        the owning site
-     * @param req         the request
-     * @param resp        the response
-     * @param logic       the site logic
+     * @param data  the web view data
+     * @param site  the owning site
+     * @param req   the request
+     * @param resp  the response
+     * @param logic the site logic
      * @throws IOException  if there is an error writing the response
      * @throws SQLException if there is an error accessing the database
      */
-    static void doGetPrintable(final StudentData studentData, final CourseSite site,
-                               final ServletRequest req, final HttpServletResponse resp,
-                               final CourseSiteLogic logic)
+    static void doGetPrintable(final WebViewData data, final CourseSite site, final ServletRequest req,
+                               final HttpServletResponse resp, final CourseSiteLogic logic)
             throws IOException, SQLException {
 
         final HtmlBuilder htm = new HtmlBuilder(2000);
-        Page.startEmptyPage(htm, site.getTitle(), true);
+        final String title = site.getTitle();
+        Page.startEmptyPage(htm, title, true);
 
-        doCalendarContent(studentData, logic, htm, true);
+        doCalendarContent(data, logic, htm, true);
 
         Page.endEmptyPage(htm, true);
 
-        AbstractSite.sendReply(req, resp, AbstractSite.MIME_TEXT_HTML, htm.toString().getBytes(StandardCharsets.UTF_8));
+        final byte[] bytes = htm.toString().getBytes(StandardCharsets.UTF_8);
+        AbstractSite.sendReply(req, resp, AbstractSite.MIME_TEXT_HTML, bytes);
     }
 
     /**
      * Constructs the course schedule content.
      *
-     * @param studentData the student data object
-     * @param logic       the course site logic
-     * @param htm         the {@code HtmlBuilder} to which to append
-     * @param printable   true if being presented in printable format
+     * @param data      the web view data
+     * @param logic     the course site logic
+     * @param htm       the {@code HtmlBuilder} to which to append
+     * @param printable true if being presented in printable format
      * @throws SQLException if there is an error accessing the database
      */
-    private static void doCalendarContent(final StudentData studentData, final CourseSiteLogic logic,
+    private static void doCalendarContent(final WebViewData data, final CourseSiteLogic logic,
                                           final HtmlBuilder htm, final boolean printable) throws SQLException {
 
         htm.sH(2).add("Recommended Progress Schedule").eH(2);
@@ -173,7 +177,8 @@ enum PageCalendar {
             sortPaceOrder(paceRegs);
 
             final Collection<LocalDate> holidays = new ArrayList<>(7);
-            final List<RawCampusCalendar> calendarDays = studentData.getCampusCalendars();
+            final SystemData systemData = data.getSystemData();
+            final List<RawCampusCalendar> calendarDays = systemData.getCampusCalendars();
             for (final RawCampusCalendar row : calendarDays) {
                 if ("holiday".equals(row.dtDesc)) {
                     holidays.add(row.campusDt);
@@ -310,12 +315,11 @@ enum PageCalendar {
      * @param logic      the course site logic
      * @param htm        the {@code HtmlBuilder} to which to append
      */
-    private static void present1Calendar(final List<RawStcourse> paceRegs,
-                                         final Iterable<RawMilestone> milestones,
-                                         final Collection<LocalDate> holidays,
-                                         final CourseSiteLogic logic, final HtmlBuilder htm) {
+    private static void present1Calendar(final List<RawStcourse> paceRegs, final Iterable<RawMilestone> milestones,
+                                         final Collection<LocalDate> holidays, final CourseSiteLogic logic,
+                                         final HtmlBuilder htm) {
 
-        final RawStcourse reg1 = paceRegs.get(0);
+        final RawStcourse reg1 = paceRegs.getFirst();
 
         final SiteDataCfgCourse courseData1 =
                 logic.data.courseData.getCourse(reg1.course, reg1.sect);
@@ -340,20 +344,17 @@ enum PageCalendar {
      * @param logic      the course site logic
      * @param htm        the {@code HtmlBuilder} to which to append
      */
-    private static void present2Calendar(final List<RawStcourse> paceRegs,
-                                         final Iterable<RawMilestone> milestones,
-                                         final Collection<LocalDate> holidays,
-                                         final CourseSiteLogic logic, final HtmlBuilder htm) {
+    private static void present2Calendar(final List<RawStcourse> paceRegs, final Iterable<RawMilestone> milestones,
+                                         final Collection<LocalDate> holidays, final CourseSiteLogic logic,
+                                         final HtmlBuilder htm) {
 
         final RawStcourse reg1 = paceRegs.get(0);
         final RawStcourse reg2 = paceRegs.get(1);
 
-        final SiteDataCfgCourse courseData1 =
-                logic.data.courseData.getCourse(reg1.course, reg1.sect);
+        final SiteDataCfgCourse courseData1 = logic.data.courseData.getCourse(reg1.course, reg1.sect);
         final RawCourse course1 = courseData1 == null ? null : courseData1.course;
 
-        final SiteDataCfgCourse courseData2 =
-                logic.data.courseData.getCourse(reg2.course, reg2.sect);
+        final SiteDataCfgCourse courseData2 = logic.data.courseData.getCourse(reg2.course, reg2.sect);
         final RawCourse course2 = courseData2 == null ? null : courseData2.course;
 
         final Collection<RawMilestone> course1Milestones = new ArrayList<>(32);
@@ -384,10 +385,9 @@ enum PageCalendar {
      * @param logic      the course site logic
      * @param htm        the {@code HtmlBuilder} to which to append
      */
-    private static void present3Calendar(final List<RawStcourse> paceRegs,
-                                         final Iterable<RawMilestone> milestones,
-                                         final Collection<LocalDate> holidays,
-                                         final CourseSiteLogic logic, final HtmlBuilder htm) {
+    private static void present3Calendar(final List<RawStcourse> paceRegs, final Iterable<RawMilestone> milestones,
+                                         final Collection<LocalDate> holidays, final CourseSiteLogic logic,
+                                         final HtmlBuilder htm) {
 
         final RawStcourse reg1 = paceRegs.get(0);
         final RawStcourse reg2 = paceRegs.get(1);
@@ -439,10 +439,9 @@ enum PageCalendar {
      * @param logic      the course site logic
      * @param htm        the {@code HtmlBuilder} to which to append
      */
-    private static void present4Calendar(final List<RawStcourse> paceRegs,
-                                         final Iterable<RawMilestone> milestones,
-                                         final Collection<LocalDate> holidays,
-                                         final CourseSiteLogic logic, final HtmlBuilder htm) {
+    private static void present4Calendar(final List<RawStcourse> paceRegs, final Iterable<RawMilestone> milestones,
+                                         final Collection<LocalDate> holidays, final CourseSiteLogic logic,
+                                         final HtmlBuilder htm) {
 
         final RawStcourse reg1 = paceRegs.get(0);
         final RawStcourse reg2 = paceRegs.get(1);
@@ -507,10 +506,9 @@ enum PageCalendar {
      * @param logic      the course site logic
      * @param htm        the {@code HtmlBuilder} to which to append
      */
-    private static void present5Calendar(final List<RawStcourse> paceRegs,
-                                         final Iterable<RawMilestone> milestones,
-                                         final Collection<LocalDate> holidays,
-                                         final CourseSiteLogic logic, final HtmlBuilder htm) {
+    private static void present5Calendar(final List<RawStcourse> paceRegs, final Iterable<RawMilestone> milestones,
+                                         final Collection<LocalDate> holidays, final CourseSiteLogic logic,
+                                         final HtmlBuilder htm) {
 
         final RawStcourse reg1 = paceRegs.get(0);
         final RawStcourse reg2 = paceRegs.get(1);
@@ -634,20 +632,22 @@ enum PageCalendar {
             LocalDate current = firstDay;
             Month activeMonth = null;
             while (current.isBefore(lastDay)) {
+                final int dayOfMonth = current.getDayOfMonth();
+
                 htm.sTr();
 
                 // Sunday
                 if (current.isBefore(earliest) || current.isAfter(latest)) {
                     emitEmptyDimCell(htm);
                 } else {
-                    emitDimDayCell(htm, current.getDayOfMonth());
+                    emitDimDayCell(htm, dayOfMonth);
                 }
                 current = current.plusDays(1L);
 
                 // Monday through Friday
                 for (int i = 0; i < 5; ++i) {
                     if (holidays.contains(current)) {
-                        emitHolidayCell(htm, current.getDayOfMonth(), HOLIDAY);
+                        emitHolidayCell(htm, dayOfMonth, HOLIDAY);
                     } else if (current.isBefore(earliest) || current.isAfter(latest)) {
                         emitEmptyCell(htm);
                     } else {
@@ -657,7 +657,7 @@ enum PageCalendar {
                             activeMonth = current.getMonth();
                             monthName = MONTHS[activeMonth.ordinal()];
                         }
-                        emitDayCell(htm, monthName, current.getDayOfMonth(), tasks);
+                        emitDayCell(htm, monthName, dayOfMonth, tasks);
                     }
                     current = current.plusDays(1L);
                 }
@@ -666,7 +666,7 @@ enum PageCalendar {
                 if (current.isBefore(earliest) || current.isAfter(latest)) {
                     emitEmptyDimCell(htm);
                 } else {
-                    emitDimDayCell(htm, current.getDayOfMonth());
+                    emitDimDayCell(htm, dayOfMonth);
                 }
                 current = current.plusDays(1L);
 
@@ -733,8 +733,7 @@ enum PageCalendar {
      */
     private static void emitWeekdayRow(final HtmlBuilder htm) {
 
-        htm.sTr()//
-                .sTh("caldim").add("SUN").eTh()
+        htm.sTr().sTh("caldim").add("SUN").eTh()
                 .sTh("cal").add("MON").eTh()
                 .sTh("cal").add("TUE").eTh()
                 .sTh("cal").add("WED").eTh()
@@ -760,7 +759,8 @@ enum PageCalendar {
             htm.sDiv("caldaymonth").add(month).eDiv();
         }
 
-        htm.sDiv("caldaynum").add(Integer.toString(number)).eDiv().div("clear");
+        final String str = Integer.toString(number);
+        htm.sDiv("caldaynum").add(str).eDiv().div("clear");
 
         for (final Task task : tasks) {
             task.emit(htm);
@@ -777,7 +777,8 @@ enum PageCalendar {
      */
     private static void emitDimDayCell(final HtmlBuilder htm, final int number) {
 
-        htm.sTd("dimcalday").sDiv("dimcaldaynum").add(Integer.toString(number)).eDiv().div("clear").eTd();
+        final String str = Integer.toString(number);
+        htm.sTd("dimcalday").sDiv("dimcaldaynum").add(str).eDiv().div("clear").eTd();
     }
 
     /**
@@ -789,7 +790,8 @@ enum PageCalendar {
      */
     private static void emitHolidayCell(final HtmlBuilder htm, final int number, final String label) {
 
-        htm.sTd("dimcalday").sDiv("calreddaynum").add(Integer.toString(number)).eDiv().div("clear");
+        final String str = Integer.toString(number);
+        htm.sTd("dimcalday").sDiv("calreddaynum").add(str).eDiv().div("clear");
 
         if (label != null) {
             htm.sDiv("callabel").add(label).eDiv();
@@ -891,54 +893,6 @@ enum PageCalendar {
         }
     }
 
-//    /**
-//     * A task that represents a Skills Review exam in a course.
-//     */
-//    private static class SkillsReviewTaskStart extends Task {
-//
-//        /**
-//         * Constructs a new {@code SkillsReviewTaskStart}.
-//         *
-//         * @param courseId the course ID
-//         * @param open     true if the course is currently open (links on buttons)
-//         */
-//        /* default */ SkillsReviewTaskStart(final String courseId, final boolean open) {
-//
-//            super("caltaskstart",
-//                    open ? SimpleBuilder.concat("<a href='course.html?course=", courseId.replace(" ", "%20"),
-//                            "&mode=course'>", SKILLS_REVIEW, "</a>") : SKILLS_REVIEW,
-//                    "background-color:#ffc");
-//        }
-//    }
-
-//    /**
-//     * A task that represents a Skills Review exam in a course.
-//     */
-//    private static class SkillsReviewTaskMid extends Task {
-//
-//        /**
-//         * Constructs a new {@code SkillsReviewTaskMid}.
-//         */
-//        /* default */ SkillsReviewTaskMid() {
-//
-//            super("caltaskmid", "&nbsp;", "background-color:#ffc");
-//        }
-//    }
-
-//    /**
-//     * A task that represents a Skills Review exam in a course.
-//     */
-//    private static class SkillsReviewTaskEnd extends Task {
-//
-//        /**
-//         * Constructs a new {@code SkillsReviewTaskEnd}.
-//         */
-//        /* default */ SkillsReviewTaskEnd() {
-//
-//            super("caltaskend", "&nbsp;", "background-color:#ffc");
-//        }
-//    }
-
     /**
      * A task that represents an objective and its associated assignment.
      */
@@ -961,56 +915,6 @@ enum PageCalendar {
         }
     }
 
-//    /**
-//     * A task that represents an objective and its associated assignment.
-//     */
-//    private static class ObjectiveTaskStart extends Task {
-//
-//        /**
-//         * Constructs a new {@code ObjectiveTaskStart}.
-//         *
-//         * @param courseId  the course ID
-//         * @param objective the objective, like "1.1"
-//         * @param open      true if the course is currently open (links on buttons)
-//         */
-//        /* default */ ObjectiveTaskStart(final String courseId, final String objective,
-//                                         final boolean open) {
-//
-//            super("caltaskstart",
-//                    open ? SimpleBuilder.concat("<a href='course.html?course=", courseId.replace(" ", "%20"),
-//                            "&mode=course'>", OBJECTIVE, objective, "</a>")
-//                            : SimpleBuilder.concat(OBJECTIVE, objective), "background-color:#ffc");
-//        }
-//    }
-
-//    /**
-//     * A task that represents an objective and its associated assignment.
-//     */
-//    private static class ObjectiveTaskMid extends Task {
-//
-//        /**
-//         * Constructs a new {@code ObjectiveTaskMid}.
-//         */
-//        /* default */ ObjectiveTaskMid() {
-//
-//            super("caltaskmid", "&nbsp;", "background-color:#ffc");
-//        }
-//    }
-
-//    /**
-//     * A task that represents an objective and its associated assignment.
-//     */
-//    private static class ObjectiveTaskEnd extends Task {
-//
-//        /**
-//         * Constructs a new {@code ObjectiveTaskEnd}.
-//         */
-//        /* default */ ObjectiveTaskEnd() {
-//
-//            super("caltaskend", "&nbsp;", "background-color:#ffc");
-//        }
-//    }
-
     /**
      * A task that represents a unit review exam.
      */
@@ -1031,58 +935,6 @@ enum PageCalendar {
                             : SimpleBuilder.concat(UNIT, unit, REVIEW), "background-color:#ffe5b2");
         }
     }
-
-//    /**
-//     * A task that represents a unit review exam.
-//     */
-//    private static class UnitReviewTaskStart extends Task {
-//
-//        /**
-//         * Constructs a new {@code UnitReviewTaskStart}.
-//         *
-//         * @param courseId the course ID
-//         * @param unit     the unit, like "1"
-//         * @param open     true if the course is currently open (links on buttons)
-//         */
-//        /* default */ UnitReviewTaskStart(final String courseId, final String unit,
-//                                          final boolean open) {
-//
-//            super("caltaskstart",
-//                    open ? SimpleBuilder.concat("<a href='course.html?course=", courseId.replace(" ", "%20"),
-//                            "&mode=course'>", UNIT, unit, REVIEW, "</a>")
-//                            : SimpleBuilder.concat(UNIT, unit, REVIEW), "background-color:#ffe5b2");
-//        }
-//    }
-
-//    /**
-//     * A task that represents a unit review exam.
-//     */
-//    private static class UnitReviewTaskMid extends Task {
-//
-//        /**
-//         * Constructs a new {@code UnitReviewTaskMid}.
-//         */
-//        /* default */ UnitReviewTaskMid() {
-//
-//            super("caltaskmid", "&nbsp;", "background-color:#ffe5b2");
-//
-//        }
-//    }
-
-//    /**
-//     * A task that represents a unit review exam.
-//     */
-//    private static class UnitReviewTaskEnd extends Task {
-//
-//        /**
-//         * Constructs a new {@code UnitReviewTaskEnd}.
-//         */
-//        /* default */ UnitReviewTaskEnd() {
-//
-//            super("caltaskend", "&nbsp;", "background-color:#ffe5b2");
-//
-//        }
-//    }
 
     /**
      * A task that represents a unit exam.
@@ -1105,56 +957,6 @@ enum PageCalendar {
         }
     }
 
-//    /**
-//     * A task that represents a unit exam.
-//     */
-//    private static class UnitExamTaskStart extends Task {
-//
-//        /**
-//         * Constructs a new {@code UnitExamTaskStart}.
-//         *
-//         * @param courseId the course ID
-//         * @param unit     the unit, like "1"
-//         * @param open     true if the course is currently open (links on buttons)
-//         */
-//        /* default */ UnitExamTaskStart(final String courseId, final String unit,
-//                                        final boolean open) {
-//
-//            super("caltaskstart",
-//                    open ? SimpleBuilder.concat("<a href='course.html?course=", courseId.replace(" ", "%20"),
-//                            "&mode=course'>", UNIT, unit, EXAM, "</a>")
-//                            : SimpleBuilder.concat(UNIT, unit, EXAM), "background-color:#ffe5b2");
-//        }
-//    }
-
-//    /**
-//     * A task that represents a unit exam.
-//     */
-//    private static class UnitExamTaskMid extends Task {
-//
-//        /**
-//         * Constructs a new {@code UnitExamTaskMid}.
-//         */
-//        /* default */ UnitExamTaskMid() {
-//
-//            super("caltaskmid", "&nbsp;", "background-color:#ffe5b2");
-//        }
-//    }
-
-//    /**
-//     * A task that represents a unit exam.
-//     */
-//    private static class UnitExamTaskEnd extends Task {
-//
-//        /**
-//         * Constructs a new {@code UnitExamTaskEnd}.
-//         */
-//        /* default */ UnitExamTaskEnd() {
-//
-//            super("caltaskend", "&nbsp;", "background-color:#ffe5b2");
-//        }
-//    }
-
     /**
      * A task that represents a final exam.
      */
@@ -1173,107 +975,4 @@ enum PageCalendar {
                             "&mode=course'>", FINAL_EXAM, "</a>") : FINAL_EXAM, "background-color:#ffe5b2");
         }
     }
-
-//    /**
-//     * A task that represents a final exam.
-//     */
-//    private static class FinalExamTaskStart extends Task {
-//
-//        /**
-//         * Constructs a new {@code FinalExamTaskStart}.
-//         *
-//         * @param courseId the course ID
-//         * @param open     true if the course is currently open (links on buttons)
-//         */
-//        /* default */ FinalExamTaskStart(final String courseId, final boolean open) {
-//
-//            super("caltaskstart",
-//                    open ? SimpleBuilder.concat("<a href='course.html?course=", courseId.replace(" ", "%20"),
-//                            "&mode=course'>", FINAL_EXAM, "</a>") : FINAL_EXAM, "background-color:#ffe5b2");
-//        }
-//    }
-
-//    /**
-//     * A task that represents a final exam.
-//     */
-//    private static class FinalExamTaskMid extends Task {
-//
-//        /**
-//         * Constructs a new {@code FinalExamTaskMid}.
-//         */
-//        /* default */ FinalExamTaskMid() {
-//
-//            super("caltaskmid", "&nbsp;", "background-color:#ffe5b2");
-//        }
-//    }
-
-//    /**
-//     * A task that represents a final exam.
-//     */
-//    private static class FinalExamTaskEnd extends Task {
-//
-//        /**
-//         * Constructs a new {@code FinalExamTaskEnd}.
-//         */
-//        /* default */ FinalExamTaskEnd() {
-//
-//            super("caltaskend", "&nbsp;", "background-color:#ffe5b2");
-//        }
-//    }
-
-//    /**
-//     * A task that represents re-testing on exams to improve score.
-//     */
-//    private static class RetestTask extends Task {
-//
-//        /**
-//         * Constructs a new {@code RetestTask}.
-//         */
-//        public RetestTask() {
-//
-//            super("caltask", "Retest", "background-color:#eee");
-//        }
-//    }
-
-//    /**
-//     * A task that represents re-testing on exams to improve score.
-//     */
-//    private static class RetestTaskStart extends Task {
-//
-//        /**
-//         * Constructs a new {@code RetestTaskStart}.
-//         */
-//        public RetestTaskStart() {
-//
-//            super("caltaskstart", "Retest", "background-color:#eee");
-//        }
-//    }
-
-//    /**
-//     * A task that represents re-testing on exams to improve score.
-//     */
-//    private static class RetestTaskMid extends Task {
-//
-//        /**
-//         * Constructs a new {@code RetestTaskMid}.
-//         */
-//        public RetestTaskMid() {
-//
-//            super("caltaskmid", "&nbsp;", "background-color:#eee");
-//        }
-//    }
-
-//    /**
-//     * A task that represents re-testing on exams to improve score.
-//     */
-//    private static class RetestTaskEnd extends Task {
-//
-//        /**
-//         * Constructs a new {@code RetestTaskEnd}.
-//         */
-//        RetestTaskEnd() {
-//
-//            super("caltaskend", "&nbsp;", "background-color:#eee");
-//        }
-//    }
 }
